Tweak share diff colours on graph

--- a/itzodmon/html/graphs.html
+++ b/itzodmon/html/graphs.html
@@ -452,7 +452,7 @@
 					{"url": "/api/diff16rate?period=" + lowerperiod, "color": "#6666FF", "label": "Diff16"},
 					{"url": "/api/diff32rate?period=" + lowerperiod, "color": "#9900CC", "label": "Diff32"},
 					{"url": "/api/diff64rate?period=" + lowerperiod, "color": "#B8008A", "label": "Diff64"},
-					{"url": "/api/diff128rate?period=" + lowerperiod, "color": "#FF6666", "label": "Diff128"},
+					{"url": "/api/diff128rate?period=" + lowerperiod, "color": "#FF00CC", "label": "Diff128"},
 					{"url": "/api/diff256rate?period=" + lowerperiod, "color": "#FF6600", "label": "Diff256"},
 					{"url": "/api/diff512rate?period=" + lowerperiod, "color": "#FF0000", "label": "Diff512"}
                 ], true);
