Fix broken donation dialog

--- a/itzodmon/html/graphs.html
+++ b/itzodmon/html/graphs.html
@@ -99,7 +99,7 @@
 				<h2>Workers</h2>
 				<div id="miners"></div>
 			</div>
-			<div class="modal hide" id="modal-donate">
+			<div class="modal hide" id="modal-contribute">
 				<div class="modal-header">
 					<h3>Project Contributions</h3>
 				</div>
